# python.pe

./: .buildinfo  .gitignore  .gitmodules  .hgignore  AUTHORS  CNAME  LICENSE  Makefile  README.md  about.md  authors.py  charlas.rst  code-of-conduct.md  conf.py  docs.rst  empresas.rst  eventos.rst  events.md  faq.rst  index.html  index.md  index.rst  irc.rst  learning-path.md  listas.rst  material_difusion.rst  miembros.rst  noticias.rst  objects.inv  package-lock.json  package.json  plan_estrategico.rst  presentaciones.rst  propuestas.rst  proyectos.rst  pycamp.rst  pyproject.toml  recetario.rst  requirements.txt  reunion_210112.rst  (+5 more)
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-site.yml
_sources/: about.md.txt  events.md.txt  index.md.txt
_sources/learning-path/: cloud-devops.md.txt  data-science.md.txt  index.md.txt  python-developer.md.txt  web-developer.md.txt
_static/: documentation_options.js
_static/css/: markdown.css
_templates/: page.html
_templates/partials/: opengraph.html
_themes/bs_pype/: base.html  (+4 more)
about/: index.html
blog/: atom.xml  first-post.md
code-of-conduct/: index.html
events/: index.html
ext/: embed.py  gravatar.py  notion.py  sketchviz.py
genindex/: index.html
learning-path/: advanced-a.md  advanced-b.md  beginner.md  cloud-devops.md  data-science.md  index.html  index.md  intermediate.md  machine-learning-ai.md  pro.md  python-developer.md  web-developer.md
meetups/: meetup_20140905.rst  meetup_20141001.rst
miembros/: abokan.rst  alfonsodg.rst  alfredodeza.rst  gcastillo.rst  index.rst  jfabian.rst  juanpablo.rst  kranfix.rst  marsam.rst  mathiasbc.rst  mcachay.rst  neosergio.rst  nxvl.rst  oskargicast.rst  plantilla.rst  puentesarrin.rst  puercopop.rst  raulsv.rst  rmaceissoft.rst  rosamaria.rst  rtbustamantec.rst  skraelings.rst  tabo.rst  xbito.rst
search/: index.html
talk-brainstorming/: index.html
(+86 files in other folders)
