[tool.poetry]
name = "python-pe"
version = "0.1.0"
description = ""
authors = ["Ider Delzo <soloidx@gmail.com>", "Jean-Pierre Chauvel <jean.pierre@chauvel.org>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.2.6"
ablog = "^0.11.6"
myst-parser = {extras = ["linkify"], version = "^2.0.0"}
sphinxcontrib-youtube = "^1.4.1"
shibuya = "^2024.4.4"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-togglebutton = "^0.3.2"
sphinx-sitemap = "^2.5.1"
sphinx-tabs = "^3.4.5"
libgravatar = "^1.0.4"
sphinxext-opengraph = "^0.9.1"
matplotlib = "^3.9.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
