[project]
name = "python-pe"
version = "0.1.0"
description = ""
authors = ["Ider Delzo <soloidx@gmail.com>", "Jean-Pierre Chauvel <jean.pierre@chauvel.org>"]
license = "Apache License, Version 2.0"
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "ablog==0.11.6",
    "libgravatar==1.0.4",
    "matplotlib>=3.10.1",
    "myst-parser[linkify]==4.0.1",
    "shibuya==2025.2.28",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.5.0",
    "sphinx-sitemap==2.7.2",
    "sphinx-tabs==3.4.5",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-youtube==1.4.1",
    "sphinxext-opengraph==0.9.1",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "poethepoet>=0.33.1",
]

[tool.poe.tasks.build]
cmd = "ablog build"
# we pass binary defined inside node package so sphinx can called when building the site
env = { SKETCHVIZ_BINARY = "./node_modules/.bin/sketchviz" }

[tool.black]
line-length = 79
